[package]
name = "solproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
tonic-reflection = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
solana-sdk = "1.16"
solana-client = "1.16"
solana-transaction-status = "1.16"

mockito = "1.6.1"
serde_json = "1.0.138"


[build-dependencies]
tonic-build = "0.9"
