[package]
name = "suiproxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A gRPC service for Sui transactions"

[dependencies]
tonic = { version = "0.8", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
sui-client = { version = "0.28.0" }
prost = "0.11"
tonic-build = "0.8"
